Fix alignment of header elements.

--- a/styles/main.css
+++ b/styles/main.css
@@ -27,31 +27,36 @@ ul {
 }
 
 .header {
-    margin-bottom: 30px;
+    margin-bottom: 50px;
     padding-left: 0px;
     padding-right: 0px;
+    padding-bottom: 10px;
     border-bottom: 1px solid #aaa;
 }
 
-#header-logo {
-  display: table-row;
+.header * {
+  display: inline-block;
 }
 
-#header-logo h1 {
+.header h1 {
   margin-top: 0;
   margin-bottom: 0;
   padding-top: 0;
   padding-bottom: 0px;
-  display: table-cell;
-  height: 90px;
   vertical-align: middle;
   font-size: 42px;
 }
 
-#header-logo img {
+.header img {
   margin-left: 20px;
-  display: table-cell;
-  vertical-align: middle;
+  display: inline;
+  vertical-align: bottom;
+}
+
+.header ul {
+  display: inline-block;
+  vertical-align: bottom;
+  margin-left: 60px;
 }
 
 .footer {
